==> chendarren640-ops/--/郝学长代码/Bootloader - 副本 - 副本 (2)/Driver/OLED/OLED.c <==
#include "OLED.h"
#include "OLEDfont.h"

u8 OLED_GRAM[144][8]; //128x64分辨率，GRAM缓冲区（兼容128x32）


/************************************************************
 * Function :       OLED_ColorTurn
 * Comment  :       设置正反色显示
 * Parameter:       i: 0-正常显示，1-反色显示
 * Return   :       无
 * Author   :
 * Date     :
************************************************************/
void OLED_ColorTurn(u8 i)
{
	if (i == 0)
	{
		OLED_WR_Byte(0xA6, OLED_CMD);//正常显示
	}
	if (i == 1)
	{
		OLED_WR_Byte(0xA7, OLED_CMD);//反色显示
	}
}


/************************************************************
 * Function :       OLED_DisplayTurn
 * Comment  :       设置屏幕旋转180度
 * Parameter:       i: 0-正常方向，1-旋转180度
 * Return   :       无
 * Author   :
 * Date     :
************************************************************/
void OLED_DisplayTurn(u8 i)
{
	if (i == 0)
	{
		OLED_WR_Byte(0xC8, OLED_CMD);//正常方向
		OLED_WR_Byte(0xA1, OLED_CMD);
	}
	if (i == 1)
	{
		OLED_WR_Byte(0xC0, OLED_CMD);//旋转180度
		OLED_WR_Byte(0xA0, OLED_CMD);
	}
}


/************************************************************
 * Function :       IIC_delay
 * Comment  :       IIC延时
 * Parameter:       无
 * Return   :       无
 * Author   :       Lingyu Meng
 * Date     :
************************************************************/
void IIC_delay(void)
{
	uint16_t t = 120;
	while (t--);
	//delay_1ms();   //若需较长延时可用
}

/************************************************************
 * Function :       I2C_Start
 * Comment  :       IIC起始信号
 * Parameter:       无
 * Return   :       无
 * Author   :
 * Date     :
************************************************************/
void I2C_Start(void)
{

	// 将SDA引脚设置为输出
	gpio_mode_set(OLED_SDA_PORT, GPIO_MODE_OUTPUT, GPIO_PUPD_PULLUP, OLED_SDA_PIN);
	gpio_output_options_set(OLED_SDA_PORT, GPIO_OTYPE_OD, GPIO_OSPEED_50MHZ, OLED_SDA_PIN);

	//模拟IIC起始时序
	OLED_SDIN_Set();
	OLED_SCLK_Set();
	IIC_delay();
	OLED_SDIN_Clr();
	IIC_delay();
	OLED_SCLK_Clr();
	IIC_delay();
}

/************************************************************
 * Function :       I2C_Stop
 * Comment  :       IIC停止信号
 * Parameter:       无
 * Return   :       无
 * Author   :
 * Date     :
************************************************************/
void I2C_Stop(void)
{

	// 将SDA引脚设置为输出
	gpio_mode_set(OLED_SDA_PORT, GPIO_MODE_OUTPUT, GPIO_PUPD_PULLUP, OLED_SDA_PIN);
	gpio_output_options_set(OLED_SDA_PORT, GPIO_OTYPE_OD, GPIO_OSPEED_50MHZ, OLED_SDA_PIN);

	OLED_SDIN_Clr();
	OLED_SCLK_Set();
	IIC_delay();
	OLED_SDIN_Set();
}

//等待从机应答信号
void I2C_WaitAck(void) //检测应答信号电平
{
	u8 t;

	OLED_SDIN_Set();
	IIC_delay();
	OLED_SCLK_Set();
	IIC_delay();
	// 将SDA切换为输入
	gpio_mode_set(OLED_SDA_PORT, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, OLED_SDA_PIN);
	while (IIC_READ_SDA)
	{
		t++;
		//printf("%d times:i2c wait out time!\r\n",t);  //调试超时
		if (t > 254)
		{
			//printf("=========================iic TIMEOUT STOP!=====================\r\n"); //超时后发送IIC停止信号
			I2C_Stop();

		}
	}
	OLED_SCLK_Clr();

	IIC_delay();

	// 将SDA重新设置为输出
	gpio_mode_set(OLED_SDA_PORT, GPIO_MODE_OUTPUT, GPIO_PUPD_PULLUP, OLED_SDA_PIN);
	gpio_output_options_set(OLED_SDA_PORT, GPIO_OTYPE_OD, GPIO_OSPEED_50MHZ, OLED_SDA_PIN);

}

//发送一个字节
void Send_Byte(u8 dat)
{
	u8 i;
	for (i = 0;i < 8;i++)
	{
		OLED_SCLK_Clr();//将时钟信号拉低
		if (dat & 0x80)//从最高位开始发送
		{
			OLED_SDIN_Set();
		}
		else
		{
			OLED_SDIN_Clr();
		}
		IIC_delay();
		OLED_SCLK_Set();
		IIC_delay();
		OLED_SCLK_Clr();
		dat <<= 1;
	}
}

//向SSD1306写入一个字节
//mode: 0-命令，1-数据
void OLED_WR_Byte(u8 dat, u8 mode)
{
	I2C_Start();
	Send_Byte(0x78);
	I2C_WaitAck();
	if (mode) { Send_Byte(0x40); }
	else { Send_Byte(0x00); }
	I2C_WaitAck();
	Send_Byte(dat);
	I2C_WaitAck();
	I2C_Stop();
}


//开启OLED显示 
void OLED_DisPlay_On(void)
{
	OLED_WR_Byte(0x8D, OLED_CMD);//电荷泵使能
	OLED_WR_Byte(0x14, OLED_CMD);//开启电荷泵
	OLED_WR_Byte(0xAF, OLED_CMD);//点亮屏幕
}

//关闭OLED显示 
void OLED_DisPlay_Off(void)
{
	OLED_WR_Byte(0x8D, OLED_CMD);//电荷泵使能
	OLED_WR_Byte(0x10, OLED_CMD);//关闭电荷泵
	OLED_WR_Byte(0xAF, OLED_CMD);//关闭屏幕
}

//将显存数据刷新到OLED	
void OLED_Refresh(void)
{
	u8 i, n;
	for (i = 0;i < 8;i++)
	{
		OLED_WR_Byte(0xb0 + i, OLED_CMD); //设置页起始地址
		OLED_WR_Byte(0x00, OLED_CMD);   //设置列低起始地址
		OLED_WR_Byte(0x10, OLED_CMD);   //设置列高起始地址
		for (n = 0;n < 128;n++)
			OLED_WR_Byte(OLED_GRAM[n][i], OLED_DATA);
	}
}

//清屏
void OLED_Clear(void)
{
	u8 i, n;
	for (i = 0;i < 8;i++)
	{
		for (n = 0;n < 128;n++)
		{
			OLED_GRAM[n][i] = 0;//清空所有显存
		}
	}
	OLED_Refresh();//刷新显示
}

//画点
//x:0~127
//y:0~31
void OLED_DrawPoint(u8 x, u8 y)
{
	u8 i, m, n;
	i = y / 8;
	m = y % 8;
	n = 1 << m;
	OLED_GRAM[x][i] |= n;
}

//清除一个点
//x:0~127
//y:0~31
void OLED_ClearPoint(u8 x, u8 y)
{
	u8 i, m, n;
	i = y / 8;
	m = y % 8;
	n = 1 << m;
	OLED_GRAM[x][i] = ~OLED_GRAM[x][i];
	OLED_GRAM[x][i] |= n;
	OLED_GRAM[x][i] = ~OLED_GRAM[x][i];
}

//画线
//x:0~127
//y:0~31
void OLED_DrawLine(u8 x1, u8 y1, u8 x2, u8 y2)
{
	u8 i, k, k1, k2;
	if (x1 == x2)    //竖线
	{
		for (i = 0;i < (y2 - y1);i++)
		{
			OLED_DrawPoint(x1, y1 + i);
		}
	}
	else if (y1 == y2)   //横线
	{
		for (i = 0;i < (x2 - x1);i++)
		{
			OLED_DrawPoint(x1 + i, y1);
		}
	}
	else      //斜线
	{
		k1 = y2 - y1;
		k2 = x2 - x1;
		k = k1 * 10 / k2;
		for (i = 0;i < (x2 - x1);i++)
		{
			OLED_DrawPoint(x1 + i, y1 + i * k / 10);
		}
	}
}

//画圆
//x,y:圆心坐标
//r:圆的半径
void OLED_DrawCircle(u8 x, u8 y, u8 r)
{
	int a, b, num;
	a = 0;
	b = r;
	while (2 * b * b >= r * r)
	{
		OLED_DrawPoint(x + a, y - b);
		OLED_DrawPoint(x - a, y - b);
		OLED_DrawPoint(x - a, y + b);
		OLED_DrawPoint(x + a, y + b);

		OLED_DrawPoint(x + b, y + a);
		OLED_DrawPoint(x + b, y - a);
		OLED_DrawPoint(x - b, y - a);
		OLED_DrawPoint(x - b, y + a);

		a++;
		num = (a * a + b * b) - r * r;//计算画点到圆心的距离
		if (num > 0)
		{
			b--;
			a--;
		}
	}
}



//在指定位置显示一个字符，包含部分字符
//x:0~127
//y:0~31
//size:选择字体 12/16/24
void OLED_ShowChar(u8 x, u8 y, u8 chr, u8 size1)
{
	u8 i, m, temp, size2, chr1;
	u8 y0 = y;
	size2 = (size1 / 8 + ((size1 % 8) ? 1 : 0)) * (size1 / 2);  //计算该字符字模占用的字节数
	chr1 = chr - ' ';  //计算偏移后的字符索引
	for (i = 0;i < size2;i++)
	{
		if (size1 == 12)
		{
			temp = asc2_1206[chr1][i];
		} //调用1206字库
		else if (size1 == 16)
		{
			temp = asc2_1608[chr1][i];
		} //调用1608字库
		else if (size1 == 24)
		{
			temp = asc2_2412[chr1][i];
		} //调用2412字库
		else return;
		for (m = 0;m < 8;m++)           //写入点阵
		{
			if (temp & 0x80)OLED_DrawPoint(x, y);
			else OLED_ClearPoint(x, y);
			temp <<= 1;
			y++;
			if ((y - y0) == size1)
			{
				y = y0;
				x++;
				break;
			}
		}
	}
}


//显示字符串
//x,y:起点坐标  
//size1:字体大小 
//*chr:字符串起始地址 
void OLED_ShowString(u8 x, u8 y, u8* chr, u8 size1)
{
	while ((*chr >= ' ') && (*chr <= '~'))//判断是否为可显示字符
	{
		OLED_ShowChar(x, y, *chr, size1);
		x += size1 / 2;
		if (x > 128 - size1)  //自动换行
		{
			x = 0;
			y += 2;
		}
		chr++;
	}
}

//m的n次方
u32 OLED_Pow(u8 m, u8 n)
{
	u32 result = 1;
	while (n--)
	{
		result *= m;
	}
	return result;
}

//显示数字
//x,y :起点坐标	 
//len :数字的位数
//size:字体大小
void OLED_ShowNum(u8 x, u8 y, u32 num, u8 len, u8 size1)
{
	u8 t, temp;
	for (t = 0;t < len;t++)
	{
		temp = (num / OLED_Pow(10, len - t - 1)) % 10;
		if (temp == 0)
		{
			OLED_ShowChar(x + (size1 / 2) * t, y, '0', size1);
		}
		else
		{
			OLED_ShowChar(x + (size1 / 2) * t, y, temp + '0', size1);
		}
	}
}

//显示汉字
//x,y:起点坐标
//num:汉字对应的字模编号
void OLED_ShowChinese(u8 x, u8 y, u8 num, u8 size1)
{
	u8 i, m, n = 0, temp, chr1;
	u8 x0 = x, y0 = y;
	u8 size3 = size1 / 8;
	while (size3--)
	{
		chr1 = num * size1 / 8 + n;
		n++;
		for (i = 0;i < size1;i++)
		{
			if (size1 == 16)
			{
				temp = Hzk1[chr1][i];
			}//调用16*16字库
			else if (size1 == 24)
			{
				temp = Hzk2[chr1][i];
			}//调用24*24字库
			else if (size1 == 32)
			{
				temp = Hzk3[chr1][i];
			}//调用32*32字库
			else if (size1 == 64)
			{
				temp = Hzk4[chr1][i];
			}//调用64*64字库
			else return;

			for (m = 0;m < 8;m++)
			{
				if (temp & 0x01)OLED_DrawPoint(x, y);
				else OLED_ClearPoint(x, y);
				temp >>= 1;
				y++;
			}
			x++;
			if ((x - x0) == size1)
			{
				x = x0;y0 = y0 + 8;
			}
			y = y0;
		}
	}
}

//滚动显示汉字
//num: 显示汉字的个数
//space: 每一屏显示的间隔
void OLED_ScrollDisplay(u8 num, u8 space)
{
	u8 i, n, t = 0, m = 0, r;
	while (1)
	{
		if (m == 0)
		{
			OLED_ShowChinese(128, 8, t, 16); //在右侧边缘写入一个汉字，存入GRAM
			t++;
		}
		if (t == num)
		{
			for (r = 0;r < 16 * space;r++)      //显示间隔
			{
				for (i = 0;i < 144;i++)
				{
					for (n = 0;n < 4;n++)
					{
						OLED_GRAM[i - 1][n] = OLED_GRAM[i][n];
					}
				}
				OLED_Refresh();
			}
			t = 0;
		}
		m++;
		if (m == 16) { m = 0; }
		for (i = 0;i < 144;i++)   //实现左移滚动
		{
			for (n = 0;n < 4;n++)
			{
				OLED_GRAM[i - 1][n] = OLED_GRAM[i][n];
			}
		}
		OLED_Refresh();
	}
}

//设置写入数据的起始页和列
void OLED_WR_BP(u8 x, u8 y)
{
	OLED_WR_Byte(0xb0 + y, OLED_CMD);//设置页起始地址
	OLED_WR_Byte(((x & 0xf0) >> 4) | 0x10, OLED_CMD);
	OLED_WR_Byte((x & 0x0f) | 0x01, OLED_CMD);
}

//x0,y0:图片显示起点坐标
//x1,y1:图片显示终点坐标
//BMP[]:要写入的图片数组
void OLED_ShowPicture(u8 x0, u8 y0, u8 x1, u8 y1, u8 BMP[])
{
	u32 j = 0;
	u8 x = 0, y = 0;
	for (y = y0;y < y1;y++)
	{
		OLED_WR_BP(x0, y);
		for (x = x0;x < x1;x++)
		{
			OLED_WR_Byte(BMP[j], OLED_DATA);
			j++;
		}
	}
}
/************************************************************
 * Function :       OLED_Init
 * Comment  :       1. 实现端口初始化
                    2. 设置OLED硬件复位所需延时
 * Parameter:       无
 * Return   :       无
 * Author   :       Lingyu Meng
 * Date     :       2025-04-01 V0.3 original
************************************************************/
void OLED_Init(void)
{
	/* 使能GPIOB时钟 */
	rcu_periph_clock_enable(RCU_GPIOB);

	/* 配置SCL和SDA引脚 */
	gpio_mode_set(OLED_SCL_PORT, GPIO_MODE_OUTPUT, GPIO_PUPD_PULLUP, OLED_SCL_PIN);
	gpio_output_options_set(OLED_SCL_PORT, GPIO_OTYPE_OD, GPIO_OSPEED_50MHZ, OLED_SCL_PIN);
	OLED_SCLK_Set();
	gpio_mode_set(OLED_SDA_PORT, GPIO_MODE_OUTPUT, GPIO_PUPD_PULLUP, OLED_SDA_PIN);
	gpio_output_options_set(OLED_SDA_PORT, GPIO_OTYPE_OD, GPIO_OSPEED_50MHZ, OLED_SDA_PIN);
	OLED_SDIN_Set();


	delay_1ms(500);

	OLED_WR_Byte(0xAE, OLED_CMD);//--turn off oled panel
	OLED_WR_Byte(0x00, OLED_CMD);//---set low column address
	OLED_WR_Byte(0x10, OLED_CMD);//---set high column address
	OLED_WR_Byte(0x40, OLED_CMD);//--set start line address  Set Mapping RAM Display Start Line (0x00~0x3F)
	OLED_WR_Byte(0x81, OLED_CMD);//--set contrast control register
	OLED_WR_Byte(0xCF, OLED_CMD);// Set SEG Output Current Brightness
	OLED_WR_Byte(0xA1, OLED_CMD);//--Set SEG/Column Mapping     0xa0左右反置 0xa1正常
	OLED_WR_Byte(0xC8, OLED_CMD);//Set COM/Row Scan Direction   0xc0上下反置 0xc8正常
	OLED_WR_Byte(0xA6, OLED_CMD);//--set normal display
	OLED_WR_Byte(0xA8, OLED_CMD);//--set multiplex ratio(1 to 64)
	OLED_WR_Byte(0x3F, OLED_CMD);//--1/64 duty (128x64)
	OLED_WR_Byte(0xD3, OLED_CMD);//-set display offset	Shift Mapping RAM Counter (0x00~0x3F)
	OLED_WR_Byte(0x00, OLED_CMD);//-not offset
	OLED_WR_Byte(0xd5, OLED_CMD);//--set display clock divide ratio/oscillator frequency
	OLED_WR_Byte(0x80, OLED_CMD);//--set divide ratio, Set Clock as 100 Frames/Sec
	OLED_WR_Byte(0xD9, OLED_CMD);//--set pre-charge period
	OLED_WR_Byte(0xF1, OLED_CMD);//Set Pre-Charge as 15 Clocks & Discharge as 1 Clock
	OLED_WR_Byte(0xDA, OLED_CMD);//--set com pins hardware configuration
	OLED_WR_Byte(0x12, OLED_CMD);//--128x64 COM config
	OLED_WR_Byte(0xDB, OLED_CMD);//--set vcomh
	OLED_WR_Byte(0x40, OLED_CMD);//Set VCOM Deselect Level
	OLED_WR_Byte(0x20, OLED_CMD);//-Set Page Addressing Mode (0x00/0x01/0x02)
	OLED_WR_Byte(0x02, OLED_CMD);//
	OLED_WR_Byte(0x8D, OLED_CMD);//--set Charge Pump enable/disable
	OLED_WR_Byte(0x14, OLED_CMD);//--set(0x10) disable
	OLED_WR_Byte(0xA4, OLED_CMD);// Disable Entire Display On (0xa4/0xa5)
	OLED_WR_Byte(0xA6, OLED_CMD);// Disable Inverse Display On (0xa6/a7) 
	OLED_WR_Byte(0xAF, OLED_CMD);
	OLED_Clear();
}
